examples/invalid/006_template_no_abstract.jd
/*********************************
 * jPipe  -  Reference Examples  * 
 * @author   Sebastien Mosser    *
 * @compiler 2.x                 *
 *********************************/

// A template must define at least one abstract support 
template t {
    conclusion c is "A conclusion"
    strategy   s is "A strategy"
    evidence   e is "An evidence"
    s supports c
    e supports s
}
